--- a/notes after trial run.Rmd
+++ b/notes after trial run.Rmd
@@ -7,6 +7,20 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-###
+## General
+Mix up exercises (or maybe have quiz questions after each verb)
+Explain useful functions is.na, negating functions using !, str_detect(), str_replace(), ymd
+
+Install `here` package. Load `lubridate` and `stringr`
 Explain anon functions
-here package
+Distinguish between filter and mutating joins. 
+
+https://github.com/gadenbuie/tidyexplain 
+
+reading in data didn't work
+
+Would be useful to have cheatsheets for dplyr
+
+### Potential exercise
+
+Find columns with any or all missing values. 
